--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.0.1",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
